[SPARK-53229][CORE][SQL][EXAMPLES][TESTS] Use Java `Map.of` instead of `ImmutableMap.of`